dynamic-rupture/regional-only/automated-runs/test_manual/manual_test_job/logs/jobid_3875122/3875122.regional-only.out
Tue 03 Sep 2024 06:38:20 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122'
Job log complete.
Starting SeisSol...
Tue Sep 03 20:38:21, Info:  Using the parameter file parameters.par 
Tue Sep 03 20:38:21, Info:  Reading SeisSol parameter file... 
Tue Sep 03 20:38:21, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Tue Sep 03 20:38:21, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Tue Sep 03 20:38:21, Info:  Disabling the wavefield output by setting "outputformat = 10" is deprecated and may be removed in a future version of SeisSol. Consider using the parameter "wavefieldoutput" instead. To disable wavefield output, add "wavefieldoutput = 0" to the "output" section of your parameters file. 
Tue Sep 03 20:38:21, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Tue Sep 03 20:38:21, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Tue Sep 03 20:38:21, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Tue Sep 03 20:38:21, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Tue Sep 03 20:38:21, Info:  SeisSol parameter file read successfully. 
Tue Sep 03 20:38:21, Info:  Model information: 
Tue Sep 03 20:38:21, Info:  Elastic model: yes 
Tue Sep 03 20:38:21, Info:  Viscoelastic model: no 
Tue Sep 03 20:38:21, Info:  Anelastic model: no 
Tue Sep 03 20:38:21, Info:  Poroelastic model: no 
Tue Sep 03 20:38:21, Info:  Anisotropic model: no 
Tue Sep 03 20:38:21, Info:  Plasticity: no 
Tue Sep 03 20:38:21, Info:  Welcome to SeisSol 
Tue Sep 03 20:38:21, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Tue Sep 03 20:38:21, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Tue Sep 03 20:38:21, Info:  Built on: Jun 17 2024 21:03:35 
Tue Sep 03 20:38:21, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Tue Sep 03 20:38:21, Info:  Compiled with HOST_ARCH = skx 
Tue Sep 03 20:38:21, Info:  Running on (rank=0): "i01r01c03s01" 
Tue Sep 03 20:38:21, Info:  Using MPI with #ranks: 16 
Tue Sep 03 20:38:21, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Tue Sep 03 20:38:21, Info:  Using asynchronous MPI routines. 
Tue Sep 03 20:38:21, Info:  Using OMP with #threads/rank: 94 
Tue Sep 03 20:38:21, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Tue Sep 03 20:38:21, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Tue Sep 03 20:38:21, Info:  Using a communication thread for advancing MPI communication. 
Tue Sep 03 20:38:21, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Tue Sep 03 20:38:21, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Tue Sep 03 20:38:21, Info:  Begin init mesh. 
Tue Sep 03 20:38:21, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Tue Sep 03 20:38:21, Info:  Running mini SeisSol to determine node weights. 
Tue Sep 03 20:38:21, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Tue Sep 03 20:38:21, Info:  Node weights: mean = 41.4848  std = 0.315426  min = 40.9264  median = 41.568  max = 41.9568 
Tue Sep 03 20:38:21, Info:  Reading PUML mesh 
Tue Sep 03 20:38:21, Info:  Inferring boundary format. 
Tue Sep 03 20:38:21, Info:  Boundary format not given in PUML file; inferring from array shape. 
Tue Sep 03 20:38:21, Info:  Using boundary format: i32 (4xi8) 
Tue Sep 03 20:38:21, Info:  Found 2685422 cells 
Tue Sep 03 20:38:21, Info:  Found 477078 vertices 
Tue Sep 03 20:38:23, Info:  Computing LTS weights. 
Tue Sep 03 20:38:26, Info:  Limiting number of clusters to 2147483646 
Tue Sep 03 20:38:26, Info:  Computing LTS weights. Done.  (108216 reductions.)
Tue Sep 03 20:38:26, Info:  Using the Parmetis partition library and strategy. 
Tue Sep 03 20:38:29, Info:  PUML mesh read in: 7.5262 s (min: 7.4549 s, max: 7.6645 s)
Tue Sep 03 20:38:29, Info:  The mesh has been read. Starting post processing. 
Tue Sep 03 20:38:29, Info:  Extracting fault information. 
Tue Sep 03 20:38:29, Info:  Exchanging ghostlayer metadata. 
Tue Sep 03 20:38:31, Info:  Mesh initialized in: 9.5201 s (min: 9.5195 s, max: 9.5208 s)
Tue Sep 03 20:38:31, Info:  End init mesh. 
Tue Sep 03 20:38:31, Info:  Begin init model. 
Tue Sep 03 20:38:31, Info:  Initialize LTS. 
Tue Sep 03 20:38:31, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Tue Sep 03 20:38:31, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Tue Sep 03 20:38:31, Info:  Number of elements in time clusters: 
Tue Sep 03 20:38:31, Info:  0: 2088 
Tue Sep 03 20:38:31, Info:  1: 265401 
Tue Sep 03 20:38:31, Info:  2: 1618976 
Tue Sep 03 20:38:31, Info:  3: 538212 
Tue Sep 03 20:38:31, Info:  4: 147352 
Tue Sep 03 20:38:31, Info:  5: 35652 
Tue Sep 03 20:38:31, Info:  6: 11329 
Tue Sep 03 20:38:31, Info:  7: 18592 
Tue Sep 03 20:38:31, Info:  8: 47781 
Tue Sep 03 20:38:31, Info:  9: 39 
Tue Sep 03 20:38:31, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Tue Sep 03 20:38:31, Info:  Number of elements in dynamic rupture time clusters: 
Tue Sep 03 20:38:31, Info:  0 (dr): 618 
Tue Sep 03 20:38:31, Info:  1 (dr): 78835 
Tue Sep 03 20:38:31, Info:  2 (dr): 310010 
Tue Sep 03 20:38:31, Info:  3 (dr): 2510 
Tue Sep 03 20:38:31, Info:  4 (dr): 0 
Tue Sep 03 20:38:31, Info:  5 (dr): 0 
Tue Sep 03 20:38:31, Info:  6 (dr): 0 
Tue Sep 03 20:38:31, Info:  7 (dr): 0 
Tue Sep 03 20:38:31, Info:  8 (dr): 0 
Tue Sep 03 20:38:31, Info:  9 (dr): 0 
Tue Sep 03 20:38:31, Info:  Initialize Friction Model 
Tue Sep 03 20:38:33, Info:  Initialize cell material parameters. 
Tue Sep 03 20:38:34, Info:  Initialize Memory layout. 
Tue Sep 03 20:38:35, Info:  Initialize cell-local matrices. 
Tue Sep 03 20:38:35, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Tue Sep 03 20:41:32, Info:  Model initialized in: 3 min 969.7099 ms (min: 3 min 967.3961 ms, max: 3 min 972.7599 ms)
Tue Sep 03 20:41:32, Info:  End init model. 
Tue Sep 03 20:41:32, Info:  Setting initial conditions. 
Tue Sep 03 20:41:32, Info:  Using initial condition "Zero" . 
Tue Sep 03 20:41:32, Info:  Reading source. 
Tue Sep 03 20:41:32, Info:  No source term specified. 
Tue Sep 03 20:41:32, Info:  Setting up boundary conditions. 
Tue Sep 03 20:41:32, Info:  Begin init output. 
Tue Sep 03 20:41:32, Info:  Initializing free surface integrator. 
Tue Sep 03 20:41:32, Info:  Initializing free surface integrator. Done. 
Tue Sep 03 20:41:32, Info:  Enabling 2D fault output 
Tue Sep 03 20:41:32, Info:  Initializing Fault output. Number of sub-triangles: 4 
Tue Sep 03 20:41:32, Info:  Initializing XDMF fault output. 
Tue Sep 03 20:41:32, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Tue Sep 03 20:41:32, Info:  Initializing XDMF fault output. Done. 
Tue Sep 03 20:41:32, Info:  Initializing free surface output. 
Tue Sep 03 20:41:32, Info:  Free surface writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Tue Sep 03 20:41:32, Info:  No record points read. 
Tue Sep 03 20:41:32, Info:  Finding meshIds for receivers... 
Tue Sep 03 20:41:32, Info:  Cleaning possible double occurring receivers for MPI... 
Tue Sep 03 20:41:32, Info:  Mapping receivers to LTS cells... 
Tue Sep 03 20:41:32, Info:  Initializing energy output. 
Tue Sep 03 20:41:32, Info:  End init output. 
Tue Sep 03 20:41:32, Info:  Initializing free surface output. Done. 
Tue Sep 03 20:41:32, Info:  Finishing initialization... 
Tue Sep 03 20:41:32, Info:  Starting simulation. 
Tue Sep 03 20:41:32, Info:  Writing faultoutput at time 0.
Tue Sep 03 20:41:32, Info:  Writing faultoutput at time 0. Done.
Tue Sep 03 20:41:32, Info:  Writing free surface at time 0.
Tue Sep 03 20:41:32, Info:  Writing free surface at time 0. Done.
Tue Sep 03 20:41:32, Info:  Writing energy output at time 0 
Tue Sep 03 20:41:32, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Tue Sep 03 20:41:32, Info:  Writing energy output at time 0 Done. 
Tue Sep 03 20:41:32, Info:  Time spent for initial IO: 53.2450 ms (min: 40.8855 ms, max: 71.1642 ms)
Tue Sep 03 20:41:59, Info:  Writing faultoutput at time 0.5.
Tue Sep 03 20:41:59, Info:  Writing faultoutput at time 0.5. Done.
Tue Sep 03 20:41:59, Info:  Writing energy output at time 0.5 
Tue Sep 03 20:41:59, Info:  Elastic energy (total, % kinematic, % potential):  7.63425e+10  , 24.8221  , 75.1779 
Tue Sep 03 20:41:59, Info:  Total momentum (X, Y, Z): 0.000460994  , 0.00519477  , 0.00278724 
Tue Sep 03 20:41:59, Info:  Frictional work (total, % static, % radiated):  7.72545e+10  , 72.9103  , 27.0897 
Tue Sep 03 20:41:59, Info:  Seismic moment (without plasticity): 3.94414e+15  Mw: 4.3273 
Tue Sep 03 20:41:59, Info:  Writing energy output at time 0.5 Done. 
Tue Sep 03 20:41:59, Info:  Time spent this phase (total): 27.2538 s (min: 27.2245 s, max: 27.2941 s)
Tue Sep 03 20:41:59, Info:  Time spent this phase (compute): 27.2006 s (min: 27.1797 s, max: 27.2316 s)
Tue Sep 03 20:41:59, Info:  Time spent this phase (IO): 53.0624 ms (min: 39.5875 ms, max: 107.6335 ms)
Tue Sep 03 20:41:59, Info:  Performance since the start: 9.2356 TFLOP/s (rank 0: 562.6171 GFLOP/s , average over ranks: 577.2264 GFLOP/s ) 
Tue Sep 03 20:41:59, Info:  Performance since last sync point: 9.2356 TFLOP/s (rank 0: 562.6171 GFLOP/s , average over ranks: 577.2264 GFLOP/s ) 
Tue Sep 03 20:42:26, Info:  Writing faultoutput at time 1.
Tue Sep 03 20:42:26, Info:  Writing faultoutput at time 1. Done.
Tue Sep 03 20:42:26, Info:  Writing free surface at time 1.
Tue Sep 03 20:42:26, Info:  Writing free surface at time 1. Done.
Tue Sep 03 20:42:26, Info:  Wrote receivers in 4.69e-07 seconds. 
Tue Sep 03 20:42:26, Info:  Writing energy output at time 1 
Tue Sep 03 20:42:26, Info:  Elastic energy (total, % kinematic, % potential):  5.87859e+11  , 24.0975  , 75.9025 
Tue Sep 03 20:42:26, Info:  Total momentum (X, Y, Z): 0.115592  , 0.0952091  , -0.0309801 
Tue Sep 03 20:42:26, Info:  Frictional work (total, % static, % radiated):  6.07908e+11  , 72.4449  , 27.5551 
Tue Sep 03 20:42:26, Info:  Seismic moment (without plasticity): 2.94175e+16  Mw: 4.90907 
Tue Sep 03 20:42:26, Info:  Writing energy output at time 1 Done. 
Tue Sep 03 20:42:26, Info:  Time spent this phase (total): 26.9031 s (min: 26.8802 s, max: 26.9334 s)
Tue Sep 03 20:42:26, Info:  Time spent this phase (compute): 26.9029 s (min: 26.8801 s, max: 26.9332 s)
Tue Sep 03 20:42:26, Info:  Time spent this phase (IO): 52.6187 ms (min: 39.7630 ms, max: 102.6243 ms)
Tue Sep 03 20:42:26, Info:  Performance since the start: 9.2954 TFLOP/s (rank 0: 566.7873 GFLOP/s , average over ranks: 580.9634 GFLOP/s ) 
Tue Sep 03 20:42:26, Info:  Performance since last sync point: 9.3560 TFLOP/s (rank 0: 571.0198 GFLOP/s , average over ranks: 584.7493 GFLOP/s ) 
Tue Sep 03 20:42:26, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Tue Sep 03 20:42:26, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Tue Sep 03 20:42:26, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Tue Sep 03 20:42:26, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Tue Sep 03 20:42:26, Info:  Simulation time (total): 54.1572 s (min: 54.1198 s, max: 54.1875 s)
Tue Sep 03 20:42:26, Info:  Simulation time (compute): 53.9979 s (min: 53.9048 s, max: 54.0408 s)
Tue Sep 03 20:42:26, Info:  Simulation time (IO): 158.7699 ms (min: 120.1254 ms, max: 280.9219 ms)
Tue Sep 03 20:42:26, Info:  Time spent in compute kernels: mean = 51.1229  std = 1.27163  min = 47.7453  median = 51.4996  max = 52.85 
Tue Sep 03 20:42:26, Info:  Load imbalance: 3.26802 % 
Tue Sep 03 20:42:26, Info:  Regression analysis of compute kernels: 
Tue Sep 03 20:42:26, Info:  "computeLocalIntegration" (total time): 246.643 s ( = 4 min 6.6432 s ) 
Tue Sep 03 20:42:26, Info:  "computeLocalIntegration" ( constant ): 2.31515e-05 (sample size: 261854 , standard error: 2.67794e-11 ) 
Tue Sep 03 20:42:26, Info:  "computeLocalIntegration" ( per element ): 8.30275e-08 (sample size: 261854 , standard error: 2.67794e-11 ) 
Tue Sep 03 20:42:26, Info:  "computeNeighboringIntegration" (total time): 303.07 s ( = 5 min 3.0697 s ) 
Tue Sep 03 20:42:26, Info:  "computeNeighboringIntegration" ( constant ): 0.0001382 (sample size: 261854 , standard error: 3.42655e-11 ) 
Tue Sep 03 20:42:26, Info:  "computeNeighboringIntegration" ( per element ): 9.21042e-08 (sample size: 261854 , standard error: 3.42655e-11 ) 
Tue Sep 03 20:42:26, Info:  "computeDynamicRupture" (total time): 268.253 s ( = 4 min 28.2531 s ) 
Tue Sep 03 20:42:26, Info:  "computeDynamicRupture" ( constant ): 8.70732e-05 (sample size: 203342 , standard error: 2.18265e-10 ) 
Tue Sep 03 20:42:26, Info:  "computeDynamicRupture" ( per element ): 4.53489e-07 (sample size: 203342 , standard error: 2.18265e-10 ) 
Tue Sep 03 20:42:26, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Tue Sep 03 20:42:26, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Tue Sep 03 20:42:26, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Tue Sep 03 20:42:26, Info:  Total time spent in compute kernels: 817.966 s ( = 13 min 37.9659 s ) 
Tue Sep 03 20:42:26, Info:  Total calculated HW-FLOP:  503.4107 TFLOP 
Tue Sep 03 20:42:26, Info:  Total calculated NZ-FLOP:  201.2410 TFLOP 
Tue Sep 03 20:42:26, Info:  Total calculated HW-FLOP/s:  9.2902 TFLOP/s 
Tue Sep 03 20:42:26, Info:  Total calculated NZ-FLOP/s:  3.7138 TFLOP/s 
Tue Sep 03 20:42:26, Info:  WP calculated HW-FLOP:  417.0995 TFLOP 
Tue Sep 03 20:42:26, Info:  WP calculated NZ-FLOP:  137.0648 TFLOP 
Tue Sep 03 20:42:26, Info:  DR calculated HW-FLOP:  86.3112 TFLOP 
Tue Sep 03 20:42:26, Info:  DR calculated NZ-FLOP:  64.1762 TFLOP 
Tue Sep 03 20:42:26, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Tue Sep 03 20:42:26, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Tue Sep 03 20:42:26, Info:  Time spent in simulation: 54.1882 s (min: 54.1881 s, max: 54.1889 s)
Tue Sep 03 20:42:26, Info:  Simulation done. 
Tue Sep 03 20:42:26, Info:  Closing IO. 
Tue Sep 03 20:42:26, Info:  Time free surface writer backend: 137.8957 ms (min: 1.7359 ms, max: 1.1666 s)
Tue Sep 03 20:42:27, Info:  Time fault writer backend: 367.4447 ms (min: 138.8585 ms, max: 2.9576 s)
Tue Sep 03 20:42:27, Info:  Time fault writer frontend: 3.1654 ms (min: 2.6143 ms, max: 3.7310 ms)
Tue Sep 03 20:42:27, Info:  Time free surface writer frontend: 477.6045 µs (min: 38.4490 µs, max: 3.4028 ms)
Tue Sep 03 20:42:27, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122 ~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/nu_shmax_test/manual_test_job
Writing hdf5 output with compression enabled (compression_level=4). 
Use --compression=0 if you want to speed-up data extraction.
u1: 0it [00:00, ?it/s]u1: 1it [00:00, 53.25it/s]
u2: 0it [00:00, ?it/s]u2: 1it [00:00, 54.31it/s]
u3: 0it [00:00, ?it/s]u3: 1it [00:00, 50.91it/s]
done writing output_jobid_3875122_extracted-surface.h5
done writing output_jobid_3875122_extracted-surface.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/output_jobid_3875122_extracted-surface.xdmf
Working on JobID: 3875122
No matching file found for jobid 3875122. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3875122 moment magnitude: 4.909070508083843 (M0 = 2.9418e+16)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/moment_rate_mainshock.png
No matching file found for jobid 3875122. Looking for output-fault.xdmf instead
mu_s: 0.5
mu_d: 0.36
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/output_jobid_3875122_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/output_jobid_3875122_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875122/output_jobid_3875122_extracted-fault.h5
Job ID set as: 3875122
mu_s: 0.5
mu_d: 0.36
~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/nu_shmax_test/manual_test_job
